# chiri

./: .env.example  .envrc  .gitignore  .gitmodules  CODE_SIGNING.md  PRIVACY.md  README.md  SECURITY.md  biome.json  chiri.spec  flake.nix  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.copr/: Makefile
.github/: dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_enhancement.yml  feature_request.yml  platform_request.yml
.github/workflows/: build.yml  checks.yml  ci.yml  deps.yml  integration.yml  post-release.yml  publish.yml  release-verify.yml  release.yml  test-app-identity.yml  test.yml  update-nix-hashes.yml
.signpath/: chiri-windows-installers.xml
aur/src/: .SRCINFO  PKGBUILD  caldav-tasks.desktop
docs/: CODE_SIGNING.md  WEBDAV_PUSH.md
flatpak/: README.md  build.sh  moe.sapphic.chiri.desktop  moe.sapphic.chiri.flatpakref  moe.sapphic.chiri.metainfo.xml  moe.sapphic.chiri.yml
nix/: package-bin.nix  package.nix  shell.nix  tooling.nix  update-hashes.sh
nix/caldav-servers/: baikal.nix  nextcloud.nix  radicale.nix  rustical.nix  xandikos.nix
scripts/: install-hooks.sh  make-srpm.sh  test-integration-all.sh  update-hashes.sh
scripts/hooks/: pre-commit
src/: App.tsx  lucide-icons.d.ts  main.tsx
src-tauri/: Cargo.toml  Chiri.desktop  build.rs  fix-libs.sh  garden.chiri.Chiri.desktop  liquid_glass_icon.rs  tauri.appimage.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/linux/: garden.chiri.Chiri.desktop
src-tauri/macos/: Chiri.provisionprofile  Info.plist  fix-libs.sh
src-tauri/macos/native/: AppMenu.m  AppNap.m  DockMenu.m  LoginItem.m  Notifications.m  WindowControls.m
src-tauri/native/macos/: AppMenu.m  DockMenu.m  WindowControls.m
src-tauri/src/: app_nap.rs  data_migration.rs  desktop_env.rs  http.rs  http_client.rs  install.rs  install_type.rs  legacy_migration.rs  logging.rs  main.rs  notification_manager.rs  notifications.rs  plist.rs  plist_utils.rs  tray.rs  window_decorations.rs  window_events.rs
src-tauri/src/app/: commands.rs  events.rs  mod.rs  setup.rs
src-tauri/src/legacy/: identifier.rs  name.rs
src-tauri/src/linux/: appimage.rs  decorations.rs  desktop.rs  fs.rs  mod.rs  unifiedpush.rs  window_decorations.rs
src-tauri/src/linux/unifiedpush/: connector.rs  state.rs  values.rs
src-tauri/src/macos/: app_nap.rs  dock_menu.rs  login_item.m  login_item.rs  menu.rs  mod.rs  quit.rs  window_controls.rs
src-tauri/src/migrations/: mod.rs  v005_add_show_unstarted.rs  v016_account_calendar_home_url.rs  v017_trusted_cert.rs  v018_account_principal_url.rs  v019_webdav_push.rs  v020_account_icon.rs  v021_oauth_tokens.rs  v022_caldav_config_table.rs  v023_recently_deleted.rs  v026_push_provider_metadata.rs  v027_remove_completed_task_history.rs
src-tauri/src/notifications/: actions.rs  commands.rs  linux.rs  macos.rs  manager.rs  mod.rs  permission.rs  permissions.m  permissions.rs  setup.rs  state.rs  types.rs  windows.rs
src-tauri/src/preferences/: formats.rs  locale.rs  mod.rs  native.rs  types.rs  week.rs
src-tauri/src/push/: autopush.rs  mod.rs  ntfy.rs
src-tauri/src/push/kunifiedpush/: distributor.rs  mod.rs
src-tauri/src/schema/: mod.rs  v001_initial_tables.rs  v002_nullable_account_calendar.rs  v003_add_url_field.rs  v004_add_emoji_field.rs  v005_add_show_unstarted.rs  v006_remove_subtasks_column.rs  v007_task_history.rs  v008_task_status.rs  v009_calendar_sort_order.rs  v010_calendar_sort_config.rs  v011_tag_sort_order.rs  v012_tag_sort_config.rs  v013_account_sort_order.rs  v014_account_sort_config.rs  v015_recurrence_fields.rs  v016_account_calendar_home_url.rs  v017_trusted_cert.rs  v018_account_principal_url.rs  v019_webdav_push.rs  v020_account_icon.rs  v021_oauth_tokens.rs  v022_caldav_config_table.rs  v023_recently_deleted.rs  v024_saved_filters.rs  v025_filter_preset_id.rs  v026_push_provider_metadata.rs  v027_remove_completed_task_history.rs  v028_pending_deletion_metadata.rs  v029_caldav_task_objects.rs  v030_push_provider_distributor.rs  v031_push_provider_metadata_json.rs
src-tauri/src/tray/: commands.rs  icon.rs  menu.rs  state.rs
src-tauri/src/utils/: fs.rs  markdown.rs  mobileconfig.rs  mod.rs  plist.rs
src-tauri/src/window/: mod.rs  state.rs
src-tauri/swift/: Package.swift
src-tauri/swift/Sources/ChiriMacOSBridge/: AppMenu.swift  AppNap.swift  LoginItem.swift  Notifications.swift
src/components/: AppModals.tsx  AppSelect.tsx  AppShell.tsx  BootstrapErrorScreen.tsx  ColorSchemeSelect.tsx  ComposedInput.tsx  ComposedTextarea.tsx  ConfirmDialog.tsx  ConnectionNoticeBanner.tsx  DateTimePicker.tsx  DragOverlay.tsx  ErrorBoundary.tsx  FloatingDropdownFrame.tsx  FloatingLayerFrame.tsx  GlobalDragRegion.tsx  Header.tsx  HoverFlyout.tsx  Icon.tsx  IconEmojiPicker.tsx  MacNotificationCard.tsx  MacNotificationPermissionCard.tsx  ModalBackdrop.tsx  ModalButton.tsx  ModalWrapper.tsx  OfflineBanner.tsx  RecentlyDeletedNoticeBanner.tsx  Select.tsx  Sidebar.tsx  TaskBatchActionsBar.tsx  TaskContextMenu.tsx  TaskEditor.tsx  TaskItem.tsx  TaskList.tsx  ToastTitle.tsx  Tooltip.tsx  TrayHostWarning.tsx  WebDAVPushStatusIcon.tsx
src/constants/: caldav.tsx  colorSchemes.ts  export.ts  icons.ts  index.ts  menu.ts  onboarding.tsx  priority.ts  settings.ts  theme.tsx  warnings.tsx
src/context/: confirmDialogContext.ts  connectionContext.ts  connectionContext.tsx  dismissableLayerContext.ts  notificationContext.ts  settingsContext.ts  settingsContext.tsx  settingsDefaults.ts  settingsImportExport.ts  syncContext.ts  taskHighlightContext.ts
src/data/: icons.ts  onboarding.tsx  settings.ts
src/hooks/: useAppController.ts  useAppFileDrop.ts  useAppImageIntegration.ts  useAppLifecycle.ts  useAppMenu.ts  useAppModals.ts  useAppUpdates.ts  useChangelog.ts  useConfirmDialog.ts  useConfirmPermanentTaskDelete.ts  useConfirmQuit.ts  useConfirmTaskDelete.ts  useDebouncedTaskUpdate.ts  useDeleteHandlers.ts  (+17 more)
(+537 files in other folders)
