[package]
name = "Chiri"
version = "0.8.1"
description = "A cross-platform CalDAV task management app. Currently in very early alpha!"
authors = ["Sapphic Angels"]
license = "zlib"
repository = "https://github.com/SapphoSys/chiri.git"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["tray-icon", "image-png"] }
tauri-plugin-http = { version = "2", default-features = false, features = ["cookies", "charset", "http2"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-log = { version = "2", features = ["colored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
log = "0.4"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
reqwest = { version = "0.12", default-features = false }
plist = "1.7"
cms = "0.3.0-pre.2"
der = { version = "0.8", features = ["ber"] }
dirs = "5.0"
user-notify = "0.4.1"
tokio = { version = "1", features = ["sync"] }

[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-http = { version = "2", default-features = false, features = ["native-tls"] }
reqwest = { version = "0.12", features = ["native-tls"] }
winrt-toast-reborn = "0.3.8"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-http = { version = "2", default-features = false, features = ["native-tls", "macos-system-configuration"] }
reqwest = { version = "0.12", features = ["native-tls"] }
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSProcessInfo", "NSString"] }
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSResponder", "NSEvent"] }

[target.'cfg(target_os = "linux")'.dependencies]
tauri-plugin-http = { version = "2", default-features = false, features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12", features = ["rustls-tls-native-roots"] }
gtk = "0.18"
notify-rust = "4"

[features]
default = ["wry"]
custom-protocol = ["tauri/custom-protocol"]
wry = ["tauri/wry"]
cef = ["tauri/cef", "dep:rustls"]

[dependencies.rustls]
version = "0.23"
default-features = false
features = ["aws_lc_rs"]
optional = true

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-plugin = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-utils = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-macros = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-runtime = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-runtime-wry = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-plugin-http = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-notification = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-process = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-os = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-deep-link = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1     # Allows LLVM to perform better optimization.
lto = true            # Enables link-time-optimizations.
opt-level = "z"      # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"       # Higher performance by disabling panic handlers.
strip = true          # Ensures debug symbols are removed.
