[package]
name = "Chiri"
version = "0.9.3"
description = "Sync and manage tasks across CalDAV servers"
authors = ["Sapphic Angels"]
license = "zlib"
repository = "https://github.com/chiriapp/chiri.git"
edition = "2021"

[build-dependencies]
cc = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-http = { version = "2", default-features = false, features = ["cookies", "charset", "http2"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", default-features = false, features = ["sqlite"] }
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-autostart = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
log = "0.4"
parking_lot = "0.12"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
reqwest = { version = "0.12", default-features = false, features = ["stream", "socks"] }
tokio = { version = "1", features = ["sync", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
uuid = "1.18"
plist = "1.7"
cms = "0.3.0-pre.2"
der = { version = "0.8", features = ["ber"] }
dirs = "6.0"
futures-util = "0.3"
icu_calendar = "2.2"
icu_locale = "2.2"
iana-time-zone = "0.1"
sys-locale = "0.3"
pulldown-cmark = "0.13.4"
ammonia = "4.1.2"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-http = { version = "2", default-features = false, features = ["native-tls"] }
reqwest = { version = "0.12", features = ["native-tls", "socks"] }
winrt-toast-reborn = "0.3.8"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-http = { version = "2", default-features = false, features = ["native-tls", "macos-system-configuration"] }
reqwest = { version = "0.12", features = ["native-tls", "socks"] }
user-notify = "0.4.1"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-user-notifications = "0.3"
block2 = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
tauri-plugin-http = { version = "2", default-features = false, features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "socks"] }
gtk = "0.18"
notify-rust = "4"
zbus = { version = "5.15.0", default-features = false, features = ["tokio"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1     # Allows LLVM to perform better optimization.
lto = true            # Enables link-time-optimizations.
opt-level = "z"      # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"       # Higher performance by disabling panic handlers.
strip = true          # Ensures debug symbols are removed.
